# analytics/internal/api/analytics_service_api/author.go
@@ -10,11 +10,10 @@ func (a *AnalyticsServiceAPI) GetAuthorStats(
 	ctx context.Context,
 	req *analytics_api.GetAuthorStatsRequest,
 ) (*analytics_api.GetAuthorStatsResponse, error) {
-	stats, err := a.svc.GetAuthorStats(ctx, req.AuthorId)
+	stats, err := a.svc.GetAuthorStats(ctx, req.AuthorId, req.Fresh)
 	if err != nil {
 		return nil, err
 	}
-
 	return &analytics_api.GetAuthorStatsResponse{
 		Stats: stats,
 	}, nil
